fix(frontend): Overflowing customer and project name text

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -196,6 +196,8 @@ textarea {
 }
 
 .page--title-main {
+  text-overflow: ellipsis;
+  overflow: hidden;
   text-align: left;
   margin: 0;
 }
